fixing h1 small height size on small widths

--- a/styles/main.css
+++ b/styles/main.css
@@ -90,7 +90,7 @@ header h1 {
     font-size: 128px;
   }
 }
-@media (max-height: 600px) {
+@media (max-height: 600px) and (min-width: 820px){
   header h1 {
     font-size: 21.35vh;
   }
